--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="purple_200">#FFBB86FC</color>
-  <color name="purple_500">#FF6200EE</color>
-  <color name="purple_700">#FF3700B3</color>
-  <color name="teal_200">#FF03DAC5</color>
-  <color name="teal_700">#FF018786</color>
-  <color name="black">#FF000000</color>
-  <color name="white">#FFFFFFFF</color>
+  <color name="haleNavy">#555B6E</color>
+
+  <color name="mediumRose">#F4978E</color>
+  <color name="rose">#D87373</color>
+  <color name="thinRose">#E7B7B7</color>
+  <color name="peachRose">#F8AD9D</color>
+  <color name="roseBud">#FBB596</color>
+  <color name="peach">#FEC89A</color>
+  <color name="seashell">#FFF8F4</color>
+  <color name="greenishBlue">#BEE3DB</color>
+  <color name="grayTurquoise">#89B0AE</color>
+
+  <color name="white">#FFFFFF</color>
+  <color name="black">#000000</color>
+
+  <color name="background">#F8F8F8</color>
+  <color name="dialogBackground">#FFFFFF</color>
+
+  <color name="gray">#AFAFAF</color>
+  <color name="thinGray">#F5F5F5</color>
+  <color name="lightGray">#EFEFEF</color>
+  <color name="mediumGray">#C4C4C4</color>
+  <color name="darkGray">#7F7F7F</color>
 </resources>
