--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,5 @@
 <resources>
-  <!-- Base application theme. TODO: adopt to DayNight.DarkActionBar later -->
-  <style name="Theme.Main" parent="Theme.MaterialComponents.Light.DarkActionBar" />
+  <style name="Theme.Main" parent="Theme.MaterialComponents.DayNight.DarkActionBar" />
 
   <style name="Theme.Main.NoActionBar">
     <item name="windowActionBar">false</item>
