--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,6 @@
 <resources>
-  <style name="Theme.Main" parent="Theme.MaterialComponents.DayNight.DarkActionBar" />
+  <style name="Theme.Main" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <item name="windowActionBar">false</item>
+    <item name="windowNoTitle">true</item>
+  </style>
 </resources>
